<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_menu_timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_local_map"
            android:icon="@drawable/ic_menu_local_map"
            android:title="@string/local_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_links"
                android:icon="@drawable/ic_menu_links"
                android:title="@string/links" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_donations"
                android:icon="@drawable/ic_menu_donations"
                android:title="@string/donations" />

        </menu>
    </item>


</menu>
